[project]
name = "org-repo-viz"
version = "0.1.0"
description = "Interactive force-directed graph of a GitHub organisation's repositories and their interdependencies"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "plotly>=5.0",
    "pandas>=2.0",
    "requests>=2.32.5",
]
